# Kiroween

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_add_organizational_features.py  3c8d6a98644d_initial_schema.py
src/kiroween/: __init__.py  config.py  main.py
src/kiroween/agenda/: __init__.py  ingestion.py  models.py  notifications.py  repository.py  search.py  service.py  task_management.py  thread_management.py  tools.py  views.py  workflows.py
src/kiroween/agent/: __init__.py  edges.py  graph.py  state.py
src/kiroween/agent/nodes/: __init__.py  extractor.py  responder.py  router.py  searcher.py  summarizer.py  tracker.py  vision_summarizer.py
src/kiroween/llm/: __init__.py  prompts.py  provider.py
src/kiroween/mcp/: __init__.py  cached_tools.py  client.py  slack_tools.py
src/kiroween/utils/: cache.py  errors.py  logging.py
src/kiroween/vision/: __init__.py  downloader.py  filter.py  processor.py  schemas.py
tests/: __init__.py  conftest.py
