[project]
name = "kiroween"
version = "0.1.0"
description = "LangGraph Slack Agent with MCP Tools for task/decision tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain/LangGraph
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",

    # MCP Integration
    "langchain-mcp-adapters>=0.1.0",
    "mcp>=1.0.0",

    # LLM Provider (GPT-4o)
    "langchain-openai>=0.3.0",

    # Database (Supabase/PostgreSQL)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "supabase>=2.0.0",

    # Configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # Utilities
    "structlog>=24.0.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",

    # Image Processing (Vision)
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
]

[project.scripts]
kiroween = "kiroween.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiroween"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
